<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginVertical="1dp"
    card_view:cardCornerRadius="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:clipToPadding="false">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFF"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/username"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/describe"
        app:layout_constraintEnd_toEndOf="@+id/describe"
        tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/describe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoLink="all"
            android:text="@string/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="8dp"
            android:background="#FFF"
            android:contentDescription="@string/repeat"
            android:src="@drawable/refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reply"
            app:layout_constraintTop_toTopOf="@+id/reply"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/repeat_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/num"
            app:layout_constraintStart_toEndOf="@+id/repeat"
            app:layout_constraintTop_toTopOf="@+id/repeat"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFF"
            android:contentDescription="@string/reply"
            android:src="@drawable/comment"
            android:onClick="clickReply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/background"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/heart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="8dp"
            android:onClick="clickHeart"
            android:background="#FFF"
            android:src="@drawable/ic_icons8_heart_outline_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/repeat"
            app:layout_constraintTop_toTopOf="@+id/repeat"
            tools:ignore="MissingConstraints" />
          <!--  app:sparkbutton_activeImage="@drawable/heart_like"
            app:sparkbutton_iconSize="24dp"
            app:sparkbutton_inActiveImage="@drawable/ic_icons8_heart_outline_50"
            app:sparkbutton_primaryColor="@color/colorPrimary"
            app:sparkbutton_secondaryColor="@color/colorAccent"-->


        <TextView
            android:id="@+id/heart_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/num"
            app:layout_constraintStart_toEndOf="@+id/heart"
            app:layout_constraintTop_toTopOf="@+id/heart"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="clickImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/describe"
            android:contentDescription="@string/image_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
